part-2/starter-project/infrastructure/k8s-manifest/blue-green/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-detector-preview
  namespace: dev
spec:
  selector:
    app: pet-detector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
